适应了新版MobileSuit

--- a/SrcMan/SrcMan.csproj
+++ b/SrcMan/SrcMan.csproj
@@ -9,7 +9,7 @@
     <Compile Remove="IMobileSuitInfo.cs" />
     <Compile Remove="MobileSuit.cs" />
     <Compile Remove="MobileSuitDataConverter.cs" />
-    <Compile Remove="MobileSuitInfo.cs" />
+    <Compile Remove="MsInfo.cs" />
     <Compile Remove="MobileSuitItem.cs" />
     <Compile Remove="MobileSuitTest.cs" />
   </ItemGroup>
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\MobileSuit\srcs\MobileSuit\MobileSuit.csproj" />
+    <ProjectReference Include="..\..\..\MobileSuit\src\MobileSuit\MobileSuit.csproj" />
     <ProjectReference Include="..\..\..\SourceMv\MvFile\Mvsrc\SrcManBase\SrcManBase.csproj" />
   </ItemGroup>
 
