--- a/SrcMan/SrcMan.csproj
+++ b/SrcMan/SrcMan.csproj
@@ -15,14 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="PlasticMetal.MobileSuit" Version="1.2.1" />
     <PackageReference Include="System.Collections" Version="4.3.0" />
     <PackageReference Include="System.ObjectModel" Version="4.3.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\MobileSuit\src\MobileSuit\MobileSuit.csproj" />
-    <ProjectReference Include="..\..\..\SourceMv\MvFile\Mvsrc\SrcManBase\SrcManBase.csproj" />
   </ItemGroup>
 
 </Project>
